--- a/index.html
+++ b/index.html
@@ -8,14 +8,22 @@
     <body>
         <div class="home">
             <div class="heading">TechForToday</div>
-            <div class="desc"></div>
+            <div class="desc">An EV Charging Scheduler based on IOT enabled Energy Meter</div>
         </div>
         <div class="input">
             <div class="heading">Input</div>
             <form>
-                <div class="in"><label>Target_Battery:  <input type="text" name="target" size="4"><br></label></div>
-                <div class="in"><label>Charging_Power:  <input type="text" name="" size="4"><br></label></div>
-                <div class="in"><label>Time:  <input type="text" name="time" size = "3"></label></div>
+                <div class="in">
+                    <label>Target Battery (%)</label>
+                    <input type="number" placeholder="ex: 80">
+                </div>
+                <div class="in">
+                    <label>Charging_Power</label>
+                    <input type="text" placeholder="ex: 7.7kWh">
+                </div>
+                <div class="in">
+                    <label>Time(24hr clock)</label>  
+                        <input type="text" placeholder="ex: 1350"></div>
             </form>
         </div>
         <div class="output"></div>
