4th Phase done finished the last region - output still have some part to do in input output load circle should be fixed

--- a/index.html
+++ b/index.html
@@ -38,10 +38,19 @@
                     <div class="box">0%</div>
                 </div>
                 <div class="load">
-
+                    <div class="name">Current Load</div>
+                    <div class="gauge">
+                        <div class="circle">
+                            <div class="inner">
+                                <div class="value">0</div>
+                                <div class="unit">kW</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="time">
-
+                    <div class="name">Time Required</div>
+                    <div class="box">1:20:56</div>
                 </div>
             </div>
         </div>
