Modifications added new html element called battery status in output region added css styling to it fixed some js code also

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
         <div class="output">
             <div class="live">Live Monitoring</div>
             <div class="actual">
+                <div class="battery-status">
+                    <div class="name">System Status</div>
+                    <div id="status">WAITING</div>
+                </div>
                 <div class="battery">
                     <div class="name">Current Battery Level</div>
                     <div class="box" id="curr-battery">0%</div>
